# LiLio

./: .gitignore  Cargo.toml  LiLio.glade  README.md  install.py  mainWindow.py  rustfmt.toml  test.py
chrome_new_profile/: Local State  chrome_shutdown_ms.txt
chrome_new_profile/Default/: Cookies  Current Session  Current Tabs  Favicons  History  History Provider Cache  Last Session  Last Tabs  Login Data  Network Persistent State  Preferences  QuotaManager  Top Sites  Translate Ranker Model  TransportSecurity  Visited Links  Web Data
chrome_new_profile/Default/AutofillStrikeDatabase/: LOG  LOG.old
chrome_new_profile/Default/BudgetDatabase/: LOG  LOG.old
chrome_new_profile/Default/Cache/: 00cb53974e0418d8_0  0375164f9180dee6_0  072875ed58c84e83_0  0743b01a280dd1e0_0  079a095ca14f7de9_0  07a7781a605479f8_0  09f5e254d39bc7ab_0  0a41855d57a470d5_0  0bee56d9654362fb_0  0ca9b0a1e4d7c39c_0  104740262903d004_0  104c65aac89d4c98_0  11de1c1521f43584_0  12b44985ba7bfc9c_0  12ca4694c16f2e2b_0  1551f6ce48ddf59d_0  17eb90a084e6fdf7_0  18e55a679cfd761d_0  1c49053a56c1d309_0  1d84ad784da67758_0  1e661e0e69525a4f_0  2076480a46affde9_0  22e76c3731ce1529_0  2452b502b456476c_0  25b3b9f691550115_0  29cd8e8e0be6137a_0  2a6e6cc81844a02b_0  2afe4cc021c95327_0  (+145 more)
core/: install.py  utils.py
data/: device-list.json  full-list.json
market/: device-list.json  full-list.json
src/: io_manager.rs  main.rs  market.rs  style.rs  ui_manager.rs  utils.rs
src/mainMenu/: mod.rs  style.rs
src/market/: mod.rs
src/menus/: mod.rs  style.rs
src/windows/: market.rs  mod.rs  style.rs
(+76 files in other folders)
